# pyflexpay

./: .gitignore  LICENCE  MANIFEST.in  README.md  repodoc_config.yml  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md  SUPPORT.md
.github/workflows/: semgrep.yml
docs/: api.rst  conf.py  index.rst
flexpay/: __init__.py
