[metadata]
name = pyflexpay
version = 0.4
description = A Python SDK for the FlexPay API for Payments Aggregation
long_description = file: README.md
long_description_content_type=text/markdown
url = https://github.com/TralahM/pyflexpay
author = Tralah M Brian
author_email = briantralah@gmail.com
license = GPLV3
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

project_urls =
    Source = https://github.com/TralahM/pyflexpay
    Tracker = https://github.com/TralahM/pyflexpay/issues
    Documentation = https://github.com/TralahM/pyflexpay

[options]
include_package_data = true
packages = find:
install_requires =

    requests

[options.extras_require]
docs=
    sphinx
    sphinx-automodapi
[options.entry_points]
console_scripts =



